# hix-practice

./: LICENSE  README.md  to-do.txt
FunctionalProgramming/Cardano/Marlowe/: marloweNotes.txt
FunctionalProgramming/Cardano/Marlowe/marlowe_Text_Scripts_Code/marloweSimpleExample/: marloweSimpleExample.cabal  package.yaml
FunctionalProgramming/Cardano/Marlowe/marlowe_Text_Scripts_Code/marloweSimpleExample/app/: 35.0.hs
FunctionalProgramming/Cardano/PioneerProgram/: notes.txt
FunctionalProgramming/Cardano/Testnet/: notes.txt
FunctionalProgramming/Integrated Haskell Platform/: ihp-notes.txt  useful-links.txt
FunctionalProgramming/Integrated Haskell Platform/restAPI/: source.txt
FunctionalProgramming/Nix/: nixUsefulLinks.txt
FunctionalProgramming/Servant/: servantPDF.txt
FunctionalProgramming/hakyll/: notes.txt
FunctionalProgramming/haskell-api/: usefulHaskellAPI_links.txt
FunctionalProgramming/haskell-api/haskellAPI-sandbox-folder/wreq-1/: wreq-1.cabal
FunctionalProgramming/haskell-api/haskellAPI-sandbox-folder/wreq-1/app/: Main.hs
FunctionalProgramming/haskell-api/usefulHakellAPI-links/: yes.txt
FunctionalProgramming/haskell-notes/: hLintNotes.txt  installingstack.txt  monadTransformersStepbyStep.url
FunctionalProgramming/haskell-text-scripts-code/Geometry/: Geometry.cabal
FunctionalProgramming/haskell-text-scripts-code/sandbox/: haskellAPIsandbox.hs  hello.hs (first simple haskell program).hs
FunctionalProgramming/haskell-text-scripts-code/writingHaskellProgramsUdemy/: .ghc.environment.x86_64-darwin-8.10.7  writingHaskellProgramsUdemy.cabal
Git/: gitNotes.txt
PHP/Laravel/laravel_Notes/: laravelNotes.txt  laravelUsefulLinks.txt
PHP/Tinkerwell/: tinkwellUsefulLinks.txt
PHP/php_Text_Scripts_Code/: php_ZombieChainsRecentlyListed.php
Postgresql/: usefulPostgressqlLinks.txt
Rsync/: rsyncNotes.txt
SQL/: sqlNotes.txt  sqlUsefulLinks.txt
Terminal/: terminalNotes.txt  terminalUsefulLinks.txt
VSCode/: useful_VsCodeLinks.txt
Vim/: vimUsefulLinks.txt
calendar/: bash-script-foo.sh  copy-of-etc-hosts  shell.nix  to-do  to-read
calendar/2022-december/mid-dec/: 06-12-22  todays-tasks
chatgtp/styx-site-practice-chatgtp/: make-site.sh
chatgtp/styx-site-practice-chatgtp/pactice-static-styx-site-6/: conf.nix  default.nix  deploy-bash.sh  deployments.nix  flake.nix  site.nix
chatgtp/styx-site-practice-chatgtp/static-site-attempt-5/: conf.nix  default.nix  site.nix
chatgtp/styx-site-practice-chatgtp/styx-site-practice-2/: build.nix  default.css  default.html  default.nix
chatgtp/styx-site-practice-chatgtp/styx-site-practice-3/: styx.yaml
chatgtp/styx-site-practice-chatgtp/styx-site-practice-4/: conf.nix  site.nix
databases/elasticsearch/: shell.nix
databases/redis/: api-stuff.txt  redis-notes.txt  redis-useful-links.txt
databases/redis/redis-text-script-code/: dump.rdb
databases/redis/redis-text-script-code/create-list-kvpair/: CHANGELOG.md  create-list-kvpair.cabal
databases/redis/redis-text-script-code/create-list-kvpair/app/: Main.hs
faux-databases/redis/: redis-notes.txt  redis-useful-links.txt
functional-programming/cardano/: cardano-notes.txt  cardano-useful-links.txt
functional-programming/cardano/db-sync-notes/: dbSync.txt  dbSync_Notes.txt
functional-programming/cardano/marlowe/: marlowe-useful-links.txt
functional-programming/cardano/plutus/: plutus-notes.txt
functional-programming/haskell-api/: wreq.github.workshop.tutorial.url
functional-programming/haskell-api/haskell-api-sandbox-folder/sand-castle-wreq-n-redis/: sand-castle-wreq-n-redis.cabal  shell.nix
functional-programming/haskell-api/haskell-api-sandbox-folder/sand-castle-wreq-n-redis/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
functional-programming/haskell-api/haskell-api-sandbox-folder/sand-castle-wreq-n-redis/redis-0.14.2/: Benchmark.hs
functional-programming/haskell-api/haskell-api-sandbox-folder/sand-castle-wreq-n-redis/redis-0.14.2/Database/Redis/Monad/: State.hs
functional-programming/haskell-api/haskell-api-sandbox-folder/sand-castle-wreq-n-redis/redis-0.14.2/Test/: GenericCommands.hs  Lock.hs  SortCommands.hs  ZSetCommands.hs
functional-programming/haskell-api/haskell-api-sandbox-folder/sand-castle-wreq-n-redis/redis-0.14.2/Test/Monad/: MultiCommands.hs
functional-programming/haskell-api/haskell-api-sandbox-folder/sand-castle-wreq-n-redis/src/: Hello.hs  Main.hs
functional-programming/haskell-api/http-client-tutorial/: source.txt
functional-programming/haskell-notes/: haskell-notes.txt  haskell-pragmas-info-link.txt  haskell-useful-links.txt
functional-programming/haskell-text-scripts-code/sandbox/: .uuid
functional-programming/haskell-text-scripts-code/sandbox/primeFunctorsApplicativesMonads/: CHANGELOG.md  System.Applicativess.hs  default.nix  primeFunctorsApplicativesMonads.cabal
functional-programming/haskell-text-scripts-code/sandbox/primeFunctorsApplicativesMonads/app/: Main.hs
functional-programming/haskell-text-scripts-code/sandbox/primeFunctorsApplicativesMonads/dist-newstyle/cache/: compiler
functional-programming/jq/: useful-links.txt
functional-programming/jq/sandbox/: demo.json  (+4 more)
functional-programming/nix/: nix-notes.txt  nix-useful-links.txt
git/: git-notes.txt
linux/bash/: bash-notes.txt
linux/git/: git-notes.txt
linux/terminal/: terminal-notes.txt
mongoDB/: mongoDB_usedwHaskell.txt
php/laravel/: ViralNFT.php
php/php-text-scripts-code/: php_Sandbox.php
php/tinkerwell/: tinkerwell-notes.txt
redis/: redis-notes.txt
ssh/: ssh-notes.txt
text-editors/vim/: vim-notes.txt
tmux/: tmux-notes.txt
vs-code/: vs-code-notes.txt
(+291 files in other folders)
