cabal-version:      3.4
name:               wreq-1
version:            0.1.0.0
synopsis:           testing
-- description:
license:            MIT
license-file:       LICENSE
author:             N.J. Childs
maintainer:         sirbeerus@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable wreq-1
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
