cabal-version:      3.0
name:               sand-castle-wreq-n-redis
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             N.J. Childs
maintainer:         sirbeerus@gmail.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Main 
    import:           warnings
    main-is:          Main.hs
    -- other-modules:   
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , redis
		    , hedis
                    , bytestring
		    , ghcid
    hs-source-dirs:   src
    default-language: Haskell2010

executable Hello 
    import:           warnings
    main-is:          Hello.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , redis
                    , hedis
                    , bytestring
                    , ghcid
    hs-source-dirs:   src
    default-language: Haskell2010












