primeFunctorsApplicativesMonads.cabal-version: >= 1.2
name:               primeFunctorsApplicativesMonads
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             N.J. Childs
maintainer:         sirbeerus@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
      System.Applicativess 
      System.Functorss 
      System.Monadss
      Lib
  other-modules:
      Paths_writingHaskellProgramsUdemy
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010


executable primeFunctorsApplicativesMonads-app
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.3.0 && <4.15
    hs-source-dirs:   app
    default-language: Haskell2010
